--- a/tools/ges-ui.glade
+++ b/tools/ges-ui.glade
@@ -124,6 +124,27 @@
               </object>
             </child>
             <child>
+              <object class="GtkMenuItem" id="timeline1">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">_Timeline</property>
+                <property name="use_underline">True</property>
+                <child type="submenu">
+                  <object class="GtkMenu" id="menu4">
+                    <property name="visible">True</property>
+                    <child>
+                      <object class="GtkImageMenuItem" id="add_file_item">
+                        <property name="label" translatable="yes">Add file...</property>
+                        <property name="visible">True</property>
+                        <property name="image">image1</property>
+                        <property name="use_stock">False</property>
+                        <signal name="activate" handler="add_file_item_activate_cb"/>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
               <object class="GtkMenuItem" id="Help">
                 <property name="visible">True</property>
                 <property name="label" translatable="yes">_Help</property>
@@ -154,6 +175,8 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="border_width">12</property>
+            <property name="position">450</property>
+            <property name="position_set">True</property>
             <child>
               <object class="GtkScrolledWindow" id="scrolledwindow1">
                 <property name="visible">True</property>
@@ -166,6 +189,32 @@
                     <property name="model">timeline</property>
                     <property name="search_column">0</property>
                     <property name="show_expanders">False</property>
+                    <child>
+                      <object class="GtkTreeViewColumn" id="description_column">
+                        <property name="resizable">True</property>
+                        <property name="sizing">autosize</property>
+                        <property name="title">Description</property>
+                        <property name="expand">True</property>
+                        <child>
+                          <object class="GtkCellRendererText" id="cellrenderertext2"/>
+                          <attributes>
+                            <attribute name="text">0</attribute>
+                          </attributes>
+                        </child>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkTreeViewColumn" id="duration_column">
+                        <property name="sizing">autosize</property>
+                        <property name="title">Duration</property>
+                        <child>
+                          <object class="GtkCellRendererText" id="cellrenderertext1"/>
+                          <attributes>
+                            <attribute name="text">1</attribute>
+                          </attributes>
+                        </child>
+                      </object>
+                    </child>
                   </object>
                 </child>
               </object>
@@ -231,7 +280,7 @@
               </object>
               <packing>
                 <property name="resize">True</property>
-                <property name="shrink">True</property>
+                <property name="shrink">False</property>
               </packing>
             </child>
           </object>
@@ -243,5 +292,11 @@
     </child>
   </object>
   <object class="GtkTreeSelection" id="treeselection1"/>
+  <object class="GtkImage" id="image1">
+    <property name="visible">True</property>
+    <property name="xpad">9</property>
+    <property name="stock">gtk-add</property>
+    <property name="icon-size">1</property>
+  </object>
   <object class="GtkSizeGroup" id="LabelSizeGroup"/>
 </interface>
