--- a/tests/examples/ges-ui.glade
+++ b/tests/examples/ges-ui.glade
@@ -221,7 +221,7 @@
                 <property name="label_xalign">0</property>
                 <property name="shadow_type">none</property>
                 <child>
-                  <object class="GtkVBox" id="vbox2">
+                  <object class="GtkVBox" id="filesource_properties">
                     <property name="visible">True</property>
                     <property name="spacing">6</property>
                     <child>
@@ -231,6 +231,7 @@
                         <child>
                           <object class="GtkLabel" id="label_duration">
                             <property name="visible">True</property>
+                            <property name="xalign">1</property>
                             <property name="yalign">0</property>
                             <property name="xpad">12</property>
                             <property name="ypad">3</property>
@@ -246,6 +247,8 @@
                           <object class="GtkHScale" id="duration_scale">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
+                            <property name="restrict_to_fill_level">False</property>
+                            <property name="draw_value">False</property>
                             <property name="value_pos">bottom</property>
                             <signal name="change_value" handler="duration_scale_change_value_cb"/>
                           </object>
@@ -258,6 +261,44 @@
                         <property name="expand">False</property>
                         <property name="fill">False</property>
                         <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkHBox" id="hbox2">
+                        <property name="visible">True</property>
+                        <property name="spacing">6</property>
+                        <child>
+                          <object class="GtkLabel" id="label_inpoint">
+                            <property name="visible">True</property>
+                            <property name="xalign">1</property>
+                            <property name="yalign">0</property>
+                            <property name="xpad">12</property>
+                            <property name="ypad">3</property>
+                            <property name="label" translatable="yes">In Point:</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">False</property>
+                            <property name="position">0</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkHScale" id="in_point_scale">
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="restrict_to_fill_level">False</property>
+                            <property name="draw_value">False</property>
+                            <property name="value_pos">bottom</property>
+                          </object>
+                          <packing>
+                            <property name="position">1</property>
+                          </packing>
+                        </child>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">1</property>
                       </packing>
                     </child>
                   </object>
@@ -291,5 +332,10 @@
     <property name="stock">gtk-add</property>
     <property name="icon-size">1</property>
   </object>
-  <object class="GtkSizeGroup" id="LabelSizeGroup"/>
+  <object class="GtkSizeGroup" id="LabelSizeGroup">
+    <widgets>
+      <widget name="label_duration"/>
+      <widget name="label_inpoint"/>
+    </widgets>
+  </object>
 </interface>
