disable playback when there's nothing in the timeline

--- a/tests/examples/ges-ui.glade
+++ b/tests/examples/ges-ui.glade
@@ -99,8 +99,9 @@
                     <child>
                       <object class="GtkImageMenuItem" id="delete_item">
                         <property name="visible">True</property>
-                        <property name="use_action_appearance">True</property>
                         <property name="related_action">delete</property>
+                        <property name="use_action_appearance">True</property>
+                        <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                       </object>
                     </child>
@@ -126,8 +127,9 @@
                     <child>
                       <object class="GtkImageMenuItem" id="add_file_item">
                         <property name="visible">True</property>
-                        <property name="use_action_appearance">True</property>
                         <property name="related_action">add_file</property>
+                        <property name="use_action_appearance">True</property>
+                        <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                       </object>
                     </child>
@@ -139,8 +141,10 @@
                     <child>
                       <object class="GtkImageMenuItem" id="menuitem2">
                         <property name="visible">True</property>
-                        <property name="use_action_appearance">True</property>
                         <property name="related_action">play</property>
+                        <property name="use_action_appearance">True</property>
+                        <property name="use_underline">True</property>
+                        <property name="use_stock">True</property>
                       </object>
                     </child>
                   </object>
@@ -179,8 +183,8 @@
             <child>
               <object class="GtkToolButton" id="add_button">
                 <property name="visible">True</property>
-                <property name="related_action">add_file</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">add_file</property>
                 <property name="label" translatable="yes">toolbutton1</property>
                 <property name="use_underline">True</property>
               </object>
@@ -192,8 +196,8 @@
             <child>
               <object class="GtkToolButton" id="delete_button">
                 <property name="visible">True</property>
-                <property name="related_action">delete</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">delete</property>
                 <property name="label" translatable="yes">Delete</property>
                 <property name="use_underline">True</property>
               </object>
@@ -214,8 +218,8 @@
             <child>
               <object class="GtkToolButton" id="play_button">
                 <property name="visible">True</property>
-                <property name="related_action">play</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">play</property>
                 <property name="label" translatable="yes">toolbutton1</property>
                 <property name="use_underline">True</property>
               </object>
@@ -397,8 +401,8 @@
   <object class="GtkTreeSelection" id="selection"/>
   <object class="GtkSizeGroup" id="LabelSizeGroup">
     <widgets>
-      <widget name="label_inpoint"/>
       <widget name="label_duration"/>
+      <widget name="label_inpoint"/>
     </widgets>
   </object>
   <object class="GtkAction" id="delete">
@@ -416,6 +420,7 @@
   <object class="GtkAction" id="play">
     <property name="label">Play</property>
     <property name="stock_id">gtk-media-play</property>
+    <property name="sensitive">False</property>
     <property name="always_show_image">True</property>
     <signal name="activate" handler="play_activate_cb"/>
   </object>
