--- a/tests/examples/ges-ui.glade
+++ b/tests/examples/ges-ui.glade
@@ -2,6 +2,40 @@
 <interface>
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy project-wide -->
+  <object class="GtkListStore" id="liststore1">
+    <columns>
+      <!-- column-name gchararray1 -->
+      <column type="gchararray"/>
+    </columns>
+    <data>
+      <row>
+        <col id="0" translatable="yes">Left</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">Right</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">Center</col>
+      </row>
+    </data>
+  </object>
+  <object class="GtkListStore" id="liststore2">
+    <columns>
+      <!-- column-name gchararray2 -->
+      <column type="gchararray"/>
+    </columns>
+    <data>
+      <row>
+        <col id="0" translatable="yes">Top</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">Bottom</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">Baseline</col>
+      </row>
+    </data>
+  </object>
   <object class="GtkWindow" id="window">
     <property name="visible">True</property>
     <property name="default_width">540</property>
@@ -99,8 +133,8 @@
                     <child>
                       <object class="GtkImageMenuItem" id="delete_item">
                         <property name="visible">True</property>
-                        <property name="related_action">delete</property>
                         <property name="use_action_appearance">True</property>
+                        <property name="related_action">delete</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                       </object>
@@ -127,8 +161,8 @@
                     <child>
                       <object class="GtkImageMenuItem" id="add_file_item">
                         <property name="visible">True</property>
-                        <property name="related_action">add_file</property>
                         <property name="use_action_appearance">True</property>
+                        <property name="related_action">add_file</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                       </object>
@@ -141,8 +175,8 @@
                     <child>
                       <object class="GtkImageMenuItem" id="menuitem2">
                         <property name="visible">True</property>
-                        <property name="related_action">play</property>
                         <property name="use_action_appearance">True</property>
+                        <property name="related_action">play</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                       </object>
@@ -292,21 +326,45 @@
                 <property name="label_xalign">0</property>
                 <property name="shadow_type">none</property>
                 <child>
-                  <object class="GtkVBox" id="filesource_properties">
+                  <object class="GtkVBox" id="vbox2">
                     <property name="visible">True</property>
                     <property name="spacing">6</property>
                     <child>
-                      <object class="GtkHBox" id="hbox1">
+                      <object class="GtkVBox" id="filesource_properties">
                         <property name="visible">True</property>
                         <property name="spacing">6</property>
                         <child>
-                          <object class="GtkLabel" id="label_duration">
+                          <object class="GtkHBox" id="hbox1">
                             <property name="visible">True</property>
-                            <property name="xalign">1</property>
-                            <property name="yalign">0</property>
-                            <property name="xpad">12</property>
-                            <property name="ypad">3</property>
-                            <property name="label" translatable="yes">Duration:</property>
+                            <property name="spacing">6</property>
+                            <child>
+                              <object class="GtkLabel" id="label_duration">
+                                <property name="visible">True</property>
+                                <property name="xalign">1</property>
+                                <property name="yalign">0</property>
+                                <property name="xpad">12</property>
+                                <property name="ypad">3</property>
+                                <property name="label" translatable="yes">Duration:</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkHScale" id="duration_scale">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="restrict_to_fill_level">False</property>
+                                <property name="draw_value">False</property>
+                                <property name="value_pos">bottom</property>
+                                <signal name="change_value" handler="duration_scale_change_value_cb"/>
+                              </object>
+                              <packing>
+                                <property name="position">1</property>
+                              </packing>
+                            </child>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -315,15 +373,42 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkHScale" id="duration_scale">
+                          <object class="GtkHBox" id="hbox2">
                             <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="restrict_to_fill_level">False</property>
-                            <property name="draw_value">False</property>
-                            <property name="value_pos">bottom</property>
-                            <signal name="change_value" handler="duration_scale_change_value_cb"/>
+                            <property name="spacing">6</property>
+                            <child>
+                              <object class="GtkLabel" id="label_inpoint">
+                                <property name="visible">True</property>
+                                <property name="xalign">1</property>
+                                <property name="yalign">0</property>
+                                <property name="xpad">12</property>
+                                <property name="ypad">3</property>
+                                <property name="label" translatable="yes">In Point:</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkHScale" id="in_point_scale">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="show_fill_level">True</property>
+                                <property name="restrict_to_fill_level">False</property>
+                                <property name="draw_value">False</property>
+                                <property name="value_pos">bottom</property>
+                                <signal name="change_value" handler="in_point_scale_change_value_cb"/>
+                              </object>
+                              <packing>
+                                <property name="position">1</property>
+                              </packing>
+                            </child>
                           </object>
                           <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">False</property>
                             <property name="position">1</property>
                           </packing>
                         </child>
@@ -335,33 +420,87 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkHBox" id="hbox2">
-                        <property name="visible">True</property>
+                      <object class="GtkVBox" id="text_properties">
                         <property name="spacing">6</property>
                         <child>
-                          <object class="GtkLabel" id="label_inpoint">
+                          <object class="GtkHBox" id="hbox3">
                             <property name="visible">True</property>
-                            <property name="xalign">1</property>
-                            <property name="yalign">0</property>
-                            <property name="xpad">12</property>
-                            <property name="ypad">3</property>
-                            <property name="label" translatable="yes">In Point:</property>
+                            <property name="spacing">6</property>
+                            <child>
+                              <object class="GtkLabel" id="label2">
+                                <property name="visible">True</property>
+                                <property name="xalign">1</property>
+                                <property name="xpad">12</property>
+                                <property name="label" translatable="yes">Text:</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkEntry" id="entry1">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="invisible_char">&#x25CF;</property>
+                              </object>
+                              <packing>
+                                <property name="position">1</property>
+                              </packing>
+                            </child>
                           </object>
                           <packing>
-                            <property name="expand">False</property>
-                            <property name="fill">False</property>
                             <property name="position">0</property>
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkHScale" id="in_point_scale">
+                          <object class="GtkHBox" id="hbox4">
                             <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="show_fill_level">True</property>
-                            <property name="restrict_to_fill_level">False</property>
-                            <property name="draw_value">False</property>
-                            <property name="value_pos">bottom</property>
-                            <signal name="change_value" handler="in_point_scale_change_value_cb"/>
+                            <property name="spacing">6</property>
+                            <child>
+                              <object class="GtkLabel" id="label3">
+                                <property name="visible">True</property>
+                                <property name="xalign">1</property>
+                                <property name="xpad">12</property>
+                                <property name="label" translatable="yes">Alignment:</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkComboBox" id="halign">
+                                <property name="visible">True</property>
+                                <property name="model">liststore1</property>
+                                <child>
+                                  <object class="GtkCellRendererText" id="cellrenderertext1"/>
+                                  <attributes>
+                                    <attribute name="text">0</attribute>
+                                  </attributes>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="position">1</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkComboBox" id="valign">
+                                <property name="visible">True</property>
+                                <property name="model">liststore2</property>
+                                <child>
+                                  <object class="GtkCellRendererText" id="cellrenderertext3"/>
+                                  <attributes>
+                                    <attribute name="text">0</attribute>
+                                  </attributes>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="position">2</property>
+                              </packing>
+                            </child>
                           </object>
                           <packing>
                             <property name="position">1</property>
@@ -401,6 +540,10 @@
   <object class="GtkTreeSelection" id="selection"/>
   <object class="GtkSizeGroup" id="LabelSizeGroup">
     <widgets>
+      <widget name="label3"/>
+      <widget name="label2"/>
+      <widget name="label_inpoint"/>
+      <widget name="label_duration"/>
       <widget name="label_duration"/>
       <widget name="label_inpoint"/>
     </widgets>
