only allow transitions to be added when the last object isn't a transition

--- a/tests/examples/ges-ui.glade
+++ b/tests/examples/ges-ui.glade
@@ -825,5 +825,6 @@
     <property name="label">Add Transtion</property>
     <property name="short_label">Add Transition</property>
     <property name="icon_name">media-playlist-shuffle</property>
+    <signal name="activate" handler="add_transition_activate_cb"/>
   </object>
 </interface>
